# PlatScifi

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md
src/: assethandler.cpp  assethandler.h  constants.h  gamestate.cpp  gamestate.h  main.cpp  renderdata.h  renderdemo.cpp  renderdemo.h  renderer.cpp  renderer.h  uimessage.h  worldcollisionmatrix.h  worldobject.cpp  worldobject.h  worldobjectincludes.h  worldspawner.cpp  worldspawner.h  worldstate.cpp  worldstate.h
src/assets/: essential.txt  level_0.csv  level_1.csv  level_2.csv  level_3.csv  level_4.csv  level_design.csv  testtex.txt  tiv_logo.txt
src/worldobjects/: animal.cpp  animal.h  bluecube.h  leveltp.h  movingcollider.h  player.cpp  player.h  redcube.h  spike.h  staticcollider.h  staticdeadly.h  stationaryimage.h
